# bsl-tls-app

./: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  Type.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs  main.rs  preflight.rs
src-tauri/src/bsl_module/: mod.rs
src-tauri/src/client_module/: mod.rs
src-tauri/src/error/: mod.rs
src-tauri/src/models/: custom_type.rs  error.rs  error_client_module.rs  parse_json.rs  standard_setting.rs
src-tauri/src/utils/: mod.rs
src/component/: HotkeyInput.tsx  hotkey_input.tsx  settings_button.tsx
src/components/: ErrorScreen.tsx  MainScreen.tsx
src/models/: mod.ts
src/pages/: ErrorScreen.tsx  LoadingScreen.tsx  MainScreen.tsx  SettingScreen.tsx  main_screen.tsx  result_page.tsx  setting_screen.tsx
src/util/: css.ts
